fix: rendering delete button when text is too wide for parent div

--- a/platform/ui/src/components/measurementTable/MeasurementTableItem.styl
+++ b/platform/ui/src/components/measurementTable/MeasurementTableItem.styl
@@ -25,7 +25,7 @@
 
   &.selected
     .rowActions
-      height: 35px
+      height: auto;
       visibility: visible
 
   .measurementLocation
